@@ -9,7 +9,15 @@
     <version>1.0-SNAPSHOT</version>
 <build>
     <plugins>
-
+        <plugin>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-maven-plugin</artifactId>
+            <version>2.3</version>
+            <configuration>
+                <resultsDirectory>allure-results</resultsDirectory>
+                <reportDirectory>allure-report</reportDirectory>
+            </configuration>
+        </plugin>
         <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
@@ -17,47 +25,26 @@
                 <argLine>
                     -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.6/aspectjweaver-1.9.6.jar"
                 </argLine>
-                <includes>
+      <!--        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>  -->
+
+       <includes>
                     <include>**/*YandexComp.java</include>
+                <include>**/*Test.java</include>
                 </includes>
+                <parallel>all</parallel>
+                <rerunFailingTestsCount>1</rerunFailingTestsCount>
+         <!--       <forkCount>10</forkCount>   -->
+                <parallel>methods</parallel>
+                <threadCountMethods>4</threadCountMethods>
+                <reuseForks>true</reuseForks>
                 <systemPropertyVariables>
                     <application.properties>/application.properties</application.properties>
                     <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    <fNumber>${surefire.forkNumber}</fNumber>
+          <!--          <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory> -->
                 </systemPropertyVariables>
             </configuration>
 
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.2</version>
-            <configuration>
-                <testFailureIgnore>false</testFailureIgnore>
-                <argLine>
-                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                </argLine>
-                <properties>
-                    <property>
-                        <name>listener</name>
-                        <value>io.qameta.allure.junit4.AllureJunit4</value>
-                    </property>
-                </properties>
-                <systemProperties>
-                    <property>
-                        <name>allure.results.directory</name>
-                        <value>${project.build.directory}/allure-results</value>
-                    </property>
-                </systemProperties>
-            </configuration>
-
-        </plugin>
-        <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
         </plugin>
         <plugin>
             <groupId>io.qameta.allure</groupId>
@@ -67,40 +54,7 @@
                 <allureDownloadUrl>https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.13.9/allure-commandline-2.13.9.zip</allureDownloadUrl>
             </configuration>
         </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.2</version>
-            <configuration>
-                <testFailureIgnore>false</testFailureIgnore>
-                <parallel>classes</parallel>
-                <perCoreThreadCount>false</perCoreThreadCount>
-                <argLine>
-                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                </argLine>
-                <properties>
-                    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-                    <allure.version>2.9</allure.version>
-                    <property>
-                        <name>listener</name>
-                        <value>io.qameta.allure.junit4.AllureJunit4</value>
-                    </property>
-                </properties>
-                <systemProperties>
-                    <property>
-                        <name>allure.results.directory</name>
-                        <value>${project.build.directory}/allure-results</value>
-                    </property>
-                </systemProperties>
-            </configuration>
-            <dependencies>
-                <dependency>
-                    <groupId>org.aspectj</groupId>
-                    <artifactId>aspectjweaver</artifactId>
-                    <version>1.9.6</version>
-                </dependency>
-            </dependencies>
-        </plugin>
+
     </plugins>
 </build>
     <dependencies>
@@ -199,9 +153,8 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-selenide</artifactId>
             <version>2.13.9</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
